# PLaID

./: DPO_preprocess.py  DPO_train.py  README.md  llm_finetune.py  llm_ift_hydra.py  llm_sample.py  pyproject.toml  requirements.txt  templating.py  utils.py
PLaID++/checkpoint-1547/: README.md  scheduler.pt  special_tokens_map.json  tokenizer_config.json  trainer_state.json
cond_gen/: alex_mp_analysis.py  alex_mp_parse.py  csv_gen.py  sample_parse.py
cond_gen/input_csv/: sg_in.csv  sg_in_short.csv
dft/: LLM_dft_create_inputs.py  ehull_correction_newest.py  equiv2_regression.py
evals/: basic_eval.py  chgnet_.py  e_above_hull.py  eval_util.py  llm_utils.py  new_relaxation_test.py  novelty.py  r_2.py  relaxations.py  rmsd.py  run_novelty.sh  stability_percentages.py  test.py
evals/novelty_utils/: joblib_.py  novelty_utils.py  pandas_.py  pymatgen_.py  tabular.py
results/: sun_esen.csv
results/cond/: 119_sun_esen.csv  143_sun_esen.csv  15_sun_esen.csv  194_sun_esen.csv  1_sun_esen.csv  216_sun_esen.csv  38_sun_esen.csv
results/qwen_7b_wyckoff_dpo_sg_combined_t2_it3_temp_0.7/: 119_eqv2_ehull_results.csv  119_esen_ehull_results.csv  119_esen_ehull_results_sun.csv  119_esen_ehull_results_sun_sun.csv  143_eqv2_ehull_results.csv  143_esen_ehull_results.csv  143_esen_ehull_results_sun.csv  143_esen_ehull_results_sun_sun.csv  15_eqv2_ehull_results.csv  (+16 more)
scripts/: plaid_dpo.sh  qwenSGCombinedt2.sh
visualizations/: alex_mp_analysis_fast.py  alex_mp_bar_graph.py  bars.py  conditional_sg_bar_graph.py  histogram_ehull.py  space_group_analysis.py  space_group_histogram.py
(+1 files in other folders)
