[project]
name = "plaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.2"
dependencies = [
    "bitsandbytes==0.43.3",
    "fairchem-core==1.10.0",
    "p-tqdm>=1.4.2",
    "peft>=0.15.2",
    "pymatgen>=2025.5.28",
    "pyxtal>=1.0.8",
    "torch==2.4.0",
    "transformers>=4.52.4",
]
